# rust-assimp

./: .travis.yml  Cargo.toml  LICENCE  README.md  importdecs.rs
examples/: open.rs
examples/assets/: cube.dae
examples/assets/guard-md5/: LICENSE.md  guard.md5mesh  iron_grill.tga  round_grill.tga
examples/model/: Cargo.toml
examples/model/src/: main.rs
src/: animation.rs  camera.rs  cexport.rs  cfileio.rs  cimport.rs  config.rs  export.rs  exporter.rs  ffi.rs  fileio.rs  import.rs  importer.rs  info.rs  lib.rs  light.rs  log.rs  material.rs  mesh.rs  postprocess.rs  properties.rs  property.rs  scene.rs  texture.rs  types.rs  util.rs  version.rs
src/ffi/: cexport.rs  cimport.rs  info.rs  log.rs  material.rs  mod.rs  rawscene.rs  types.rs
